<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Welcome" >

    <Button
        android:id="@+id/alarm_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="21dp"
        android:onClick="alarm_settings_onClick"
        android:text="@string/alarm_settings_button_text" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:background="@drawable/ic_launcher"
        android:contentDescription="@string/app_name"
        android:onClick="secure_onClick"
        android:src="@android:drawable/ic_lock_lock" />

    <Button
        android:id="@+id/info"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/alarm_settings_button"
        android:layout_alignBottom="@+id/alarm_settings_button"
        android:layout_centerHorizontal="true"
        android:onClick="info_onClick"
        android:text="@string/info_button_text" />

    <Button
        android:id="@+id/account_settings_button"
        style="@style/AppBaseTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/info"
        android:layout_marginLeft="17dp"
        android:layout_toRightOf="@+id/textView1"
        android:onClick="account_settings_onClick"
        android:text="@string/account_settings_button_text" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/welcome" />

</RelativeLayout>